bootnode-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eth-bootnode
  labels:
    app: eth-bootnode
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: eth-bootnode
  template:
    metadata:
      labels:
        app: eth-bootnode
    spec:
      containers:
        - name: bootnode
          image: ethereum/client-go:alltools-release-1.8
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: ".5"
              memory: 1Gi
            requests:
              cpu: "0.25"
              memory: 512Mi
          command: ["/bin/sh"]
          args:
            - "-c"
            - "bootnode --nodekey=/etc/bootnode/node.key --verbosity=4"
          volumeMounts:
            - name: data
              mountPath: /etc/bootnode
          ports:
            - name: discovery
              containerPort: 30301
              protocol: UDP
        - name: bootnode-server
          image: ethereum/client-go:alltools-release-1.8
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
          command: ["/bin/sh"]
          volumeMounts:
          - name: data
            mountPath: /etc/bootnode
          args:
            - "-c"
            - "while [ 1 ]; do echo -e \"HTTP/1.1 200 OK\n\nenode://$(bootnode -writeaddress --nodekey=/etc/bootnode/node.key)@$(POD_IP):30301\" | nc -l -v -p 8080 || break; done;"
          ports:
            - containerPort: 8080
      volumes:
        - name: data
          emptyDir: {}
