geth-miner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eth-geth-miner
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: eth-geth-miner
  template:
    metadata:
      labels:
        app: eth-geth-miner
    spec:
      containers:
      - name: eth-geth-miner
        image: ethereum/client-go:release-1.8
        resources:
          limits:
            cpu: "500m"
          requests:
            cpu: "250m"
        command: ["/bin/sh"]
        args:
        - "c"
        - "geth --bootnodes=`cat /root/.ethereum/bootnodes` \ 
          --mine --etherbase=0 --networkid=${NETWORK_ID} \ 
          --ethstats=${HOSTNAME}:${ETHSTATS_SVC} --verbosity=5"
        ports:
        - name: discovery-udp
          containerPort: 30303
          protocol: UDP
        - name: discovery-tcp
          containerPort: 30303
          protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /root/.ethereum
