bootnode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eth-bootnode
  labels:
    app : eth-bootnode
spec:
  selector:
    app: eth-bootnode
  clusterIP: None
  ports:
  - name: discovery
    port: 30301
  - name: http
    port: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: eth-bootnode-registrar
  labels:
    app: eth-bootnode-registrar
spec:
  selector:
    app: eth-bootnode-registrar
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9898
