ethstats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eth-ethstats
spec:
  selector:
    app: eth-ethstats
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
